# kanshi

./: .gitignore  CLAUDE.md  Cargo.toml
chart/kanshi/: Chart.yaml  values.schema.json  values.yaml
chart/kanshi/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  daemonset.yaml  serviceaccount.yaml  servicemonitor.yaml
chart/kanshi/templates/tests/: test-health.yaml
docs/: development-flow.md
kanshi-common/: Cargo.toml
kanshi-common/src/: lib.rs
kanshi-ebpf/: Cargo.toml
kanshi-ebpf/src/: main.rs
src/: bpf_loader.rs  config.rs  crd_watcher.rs  error.rs  event_metrics.rs  event_reader.rs  forensics_writer.rs  health.rs  lib.rs  metrics.rs  policy.rs  verifier.rs
tests/: pillar3_4_integration.rs
