[workspace]
members = [".", "kanshi-common"]
exclude = ["kanshi-ebpf"]
resolver = "2"

[package]
name = "kanshi"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Pleme Team <team@pleme.io>"]
description = "Kanshi (監視) - eBPF runtime integrity sentinel"
license = "MIT"
repository = "https://github.com/pleme-io/kanshi"

[dependencies]
# Shared types with eBPF programs
kanshi-common = { path = "kanshi-common" }

# Core integrity library
tameshi = { path = "../tameshi" }

# Async runtime
tokio = { version = "1.50", features = ["full"] }

# HTTP server (health + admin API)
axum = { version = "0.8", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

# Configuration
figment = { version = "0.10", features = ["yaml", "env"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Metrics
prometheus-client = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Kubernetes CRD watching
kube = { version = "0.98", features = ["runtime", "client", "rustls-tls", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
schemars = "0.8"

# Hex encoding/decoding
const-hex = "1"

[lints.clippy]
pedantic = "warn"

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.6"
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
